# SpectralRenderer

./: .gitignore  CLAUDE.md  CMakeLists.txt  COMMIT_MSG.txt  LICENSE  README_BUILD.md  ROADMAP.txt  ROADMAP.txt.bak_ds_intermittent  ROADMAP.txt.bak_hdrivis_park  ROADMAP.txt.bak_mpmenu_park  ROADMAP.txt.bak_roadmap  THIRD_PARTY_LICENSES.md  apply_claudemd_shaderop_gotcha.py  apply_clearcoat.py  apply_cpu_backface_cull_fix.py  apply_cpu_doubleside_diag.py  apply_cpu_doubleside_fix.py  apply_cpu_doubleside_shell_fix.py  apply_doubleside_cleanup.py  apply_ds_gpu_fix.py  apply_envlight_diag.py  apply_gpu_matcheck_extend.py  apply_gpu_matcheck_full.py  apply_hdri_visible.py  apply_housekeeping.py  apply_housekeeping_roadmap_only.py  apply_meshprops_fields.py  apply_mpfields_diag (1).py  apply_mpfields_diag.py  apply_preset_split.py  apply_preset_ui_polish.py  apply_remove_dead_mb_knobs.py  apply_roadmap_hdrivis_parking.py  apply_roadmap_mpmenu_parking.py  apply_roadmap_parking_notes.py  apply_roadmap_preset_fix.py  apply_roadmap_three_park.py  apply_sss_burley.py  apply_sss_label_cleanup.py  apply_sss_random_walk.py  (+17 more)
cmake/: EmbedPTX.cmake
files/: SpectralVolumeMaterial.cpp
icons/alt3/: menu.py
src/: HdSpectralApi.h  HdSpectralMesh.cpp  HdSpectralMesh.h  HdSpectralRenderBuffer.cpp  HdSpectralRenderBuffer.h  HdSpectralRenderDelegate.cpp  HdSpectralRenderDelegate.h  HdSpectralRenderPass.cpp  HdSpectralRenderPass.h  HdSpectralRendererPlugin.cpp  HdSpectralRendererPlugin.h  SpectralBSDF.h  SpectralBVH.cpp  SpectralBVH.h  SpectralDraftingOp.cpp  SpectralDraftingOp.h  SpectralEnvLight - bak.cpp  SpectralEnvLight - bak.h  SpectralEnvLight.cpp  SpectralEnvLight.h  SpectralEnvLight.h.bak_hdrivis  SpectralGPU.cpp  SpectralGPU.cpp.bak_clearcoat  SpectralGPU.cpp.bak_dsgpufix  SpectralGPU.cpp.bak_hdrivis  SpectralGPU.cpp.bak_matcheck  SpectralGPU.cpp.bak_matcheckfull  SpectralGPU.cpp.bak_mpdiag  SpectralGPU.h  SpectralGPU.h.bak_hdrivis  SpectralGPUKernel.cu  SpectralGPUKernel.cu.bak_clearcoat  SpectralGPUKernel.cu.bak_hdrivis  SpectralGPUKernel.cu.bak_mpdiag  SpectralGPUKernel.cu.bak_mpfields  SpectralGPUKernel.cu.bak_sssrw  SpectralGPUParams.h  SpectralGPUParams.h.bak_clearcoat  SpectralGPUParams.h.bak_dsgpufix  SpectralGPUParams.h.bak_hdrivis  (+53 more)
src/backups/: SpectralDraftingOp.cpp.bak_passthrough  SpectralGPU.cpp.bak_buildiag  SpectralGPU.cpp.bak_gpumetal  SpectralGPU.cpp.bak_gpusss  SpectralGPUKernel.cu.bak2  SpectralGPUKernel.cu.bak3  SpectralGPUKernel.cu.bak_gpusss  SpectralGPUParams.h.bak_gpusss  SpectralIntegrator.cpp.bak2  SpectralRenderIop.cpp.bak_dome_illum  SpectralRenderIop.cpp.bak_instvis  SpectralRenderIop.cpp.bak_passthrough  SpectralRenderIop.cpp.bak_studio  SpectralRenderIop.cpp.bak_tumbledfix  SpectralRenderIop.cpp.bak_tumblediag  SpectralRenderIop.cpp.bak_tumblefixA  SpectralRenderIop.cpp.bak_vpshadows  SpectralRenderIop.h.bak_tumblefixA  SpectralRenderIop.h.bak_vpshadows  SpectralStudioLight.cpp.bak_studio  SpectralSurfaceOp.cpp.bak_presetreal  SpectralSurfaceOp.cpp.bak_presetstale
src/files/: CMakeLists_patch.txt
src/files (1)/: SpectralEnvLight.cpp  SpectralGPUParams.h  SpectralRenderIop.cpp  SpectralRenderIop.h  SpectralSurfaceOp.cpp
testfiles/: test_bounce.usda  test_creases.usda  test_cube.usda  test_instancer.py  test_instancer.usda  test_lights.usda  test_materials.usda  test_subdiv_cube.usda  test_vector_disp.hdr  test_vector_disp.usda
